добавит основные фалы для верстки

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('./html/head.html', {
-"title": "flower bridge",
+"title": "Сибирь. Главная страницы",
 })
 
 <body class="contractors">
