--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,6 +1,209 @@
+<footer class="footer">
+  <div class="container footer__container">
+    <!-- <div class="footer__top"> -->
+    <div class="footer__logo logo">
+      <!-- !!!!!!!!!!!!!!!! возможно надо переименовать в index.html: -->
+      <a href="index.html" class="logo__link">
+        <img class="logo__ecoteh" width="241" height="45" src="@img/ecoteh.png" alt="Логотип Экотех">
+      </a>
+      <a href="#" class="logo__link">
+        <img class="logo__sk" width="241" height="45" src="@img/sk.png" alt="Логотип Экотех">
+      </a>
+    </div>
+    <!-- </div> -->
 
-<script src="js/lib/simplebar.min.js"></script>
-<!-- <script src="js/app.min.js"></script> -->
+    <div class="footer__contacts-block contacts-block">
+      <div class="footer__contacts contacts">
+        <a href="tel:+7 (3452) 55-11-30" class="contacts__item contacts__item_phone">
+          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M6.34404 1H3.85612C1.91853 1 0.529257 2.83418 1.14943 4.67221C2.389 8.34581 4.0559 11.6003 6.2278 13.7722C8.3997 15.9441 11.6542 17.611 15.3278 18.8505C17.1658 19.4708 19 18.0815 19 16.1439V13.6555C19 12.9433 18.614 12.2871 17.9915 11.9409L15.824 10.7359L15.6668 10.6575C15.1341 10.4209 14.52 10.4324 13.9933 10.6959L12.0106 11.6861L11.9635 11.6714C11.8852 11.6459 11.7972 11.6152 11.7009 11.5788C11.208 11.3926 10.7142 11.1326 10.2569 10.7897C10.0585 10.641 9.87092 10.4793 9.6958 10.3042C9.51851 10.1269 9.35484 9.93672 9.20431 9.73532C8.86264 9.27817 8.60281 8.78441 8.41608 8.29148L8.3231 8.02871L8.30767 7.98022L9.29857 6.00051C9.58809 5.42155 9.57332 4.73697 9.25912 4.17097L8.05927 2.00961C7.7133 1.38649 7.05669 1 6.34404 1Z"
+              stroke="#2FA7BE" stroke-width="2" />
+          </svg>
+          +7 (3452) 55-11-30
+        </a>
+        <a href="mailto:ecoteh.72@gmail.com" class="contacts__item contacts__item_email">
+          <svg width="26" height="20" viewBox="0 0 26 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M5.5 5L13 8.875L20.5 5M22.6 1H3.4C2.08 1 1.012 2.0125 1.012 3.25L1 16.75C1 17.9875 2.08 19 3.4 19H22.6C23.92 19 25 17.9875 25 16.75V3.25C25 2.0125 23.92 1 22.6 1Z"
+              stroke="#2FA7BE" stroke-width="2" stroke-linecap="round" />
+          </svg>
+          ecoteh.72@gmail.com
+        </a>
+      </div>
+
+      <div class="footer__social social">
+        <a href="#" class="social__link">
+          <svg width="34" height="32" viewBox="0 0 34 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M13 27.1714L13.5 19.8567C13.5 19.8567 27.5 8.23705 27.5 7.66559C27.5 7.09413 26.5 7.66562 26.5 7.66562L9.5 17.9061L2 15.9556C2 15.9556 1 15.5189 1 14.9803C1 14.4416 2 14.005 2 14.005L30.5 3.27683C30.5 3.27683 31.8613 2.65396 32.5 3.27683C32.7285 3.49969 33 3.76448 33 4.25212C33 4.25212 28.5 27.659 27.5 28.6343C27 29.1219 26.5 29.1219 25.5 28.6343C24.6887 28.2387 18 23.2702 18 23.2702L14.5 26.6837C14 27.1713 13.5001 27.1713 13.0001 27.1714H13Z"
+              stroke="#2FA7BE" stroke-width="2" />
+          </svg>
+        </a>
+        <a href="#" class="social__link">
+          <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M16 29.5333C23.732 29.5333 30 23.2579 30 15.5167C30 7.77548 23.732 1.5 16 1.5C8.26801 1.5 2 7.77548 2 15.5167C2 18.6504 3.02717 21.544 4.7628 23.8782L2 30.5L9.24138 27.7948C11.2451 28.9027 13.549 29.5333 16 29.5333ZM12.1086 6.53244C12.588 7.00321 12.8223 7.34826 13.5469 8.41559C14.2717 9.48307 14.0266 10.2991 12.8223 10.9877C12.6859 11.0657 12.5343 11.1214 12.3795 11.1781C12.0087 11.3141 11.62 11.4567 11.3808 11.9295C11.0417 12.5996 12.795 15.0557 14.7403 17.1086C16.6583 18.9919 19.0558 20.4044 19.5322 20.4045C20.0799 20.4046 20.2403 19.9699 20.4187 19.4864C20.5454 19.1433 20.6811 18.7756 20.9707 18.5212C21.4739 18.0791 22.4123 17.5794 22.8918 18.0503C23.528 18.675 23.7898 18.9315 23.9664 19.1044C24.1894 19.3229 24.2762 19.408 24.8098 19.9336C25.401 20.516 25.2893 21.3461 24.3272 22.2878C23.4376 23.1586 22.6559 23.525 21.4533 23.7003C20.3693 23.8583 19.2847 23.4251 18.0318 22.9247C17.8947 22.8699 17.7556 22.8143 17.6142 22.7587C14.7638 21.6358 13.3435 20.3698 11.3808 18.0503C11.3074 17.9636 11.2351 17.8784 11.164 17.7945C9.52296 15.8591 8.48681 14.6371 8.02426 11.9295C8.00477 11.8154 7.98066 11.6952 7.95543 11.5696C7.75135 10.5529 7.47439 9.17315 8.98326 7.69194C9.46294 7.22105 11.3808 5.81777 12.1086 6.53244Z"
+              stroke="#2FA7BE" stroke-width="2" />
+          </svg>
+        </a>
+      </div>
+
+      <button class="btn btn_w_167 btn_white btn_reset footer__btn popup-link" href="#popup-form">
+        Отправить заявку
+      </button>
+    </div>
+
+
+    <nav class="nav footer__nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a href="index.html" class="nav__link nav__link_footer">
+            <p class="nav__text">
+              Главная
+            </p>
+          </a>
+        </li>
+        <li class="nav__item">
+          <div class="nav__dot"></div>
+        </li>
+        <li class="nav__item">
+          <a href="catalog.html" class="nav__link nav__link_footer">
+            <p class="nav__text">
+              Каталог
+            </p>
+          </a>
+        </li>
+        <li class="nav__item">
+          <div class="nav__dot"></div>
+        </li>
+        <li class="nav__item">
+          <a href="utelizaciya-shin.html" class="nav__link nav__link_footer">
+            <p class="nav__text">
+              Утилизация шин
+            </p>
+          </a>
+        </li>
+        <li class="nav__item">
+          <div class="nav__dot"></div>
+        </li>
+        <li class="nav__item">
+          <a href="o-companii.html" class="nav__link nav__link_footer">
+            <p class="nav__text">
+              О компании
+            </p>
+          </a>
+        </li>
+        <li class="nav__item">
+          <div class="nav__dot"></div>
+        </li>
+        <li class="nav__item">
+          <a href="novosti.html" class="nav__link nav__link_footer">
+            <p class="nav__text">
+              Новости
+            </p>
+          </a>
+        </li>
+        <li class="nav__item">
+          <div class="nav__dot"></div>
+        </li>
+        <li class="nav__item">
+          <a href="portfolio.html" class="nav__link nav__link_footer">
+            <p class="nav__text">
+              Портфолио
+            </p>
+          </a>
+        </li>
+        <li class="nav__item">
+          <div class="nav__dot"></div>
+        </li>
+        <li class="nav__item">
+          <a href="kontakty.html" class="nav__link nav__link_footer">
+            <p class="nav__text">
+              Контакты
+            </p>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+
+    <div class="footer__bottom-block">
+      <div class="footer__policy-block">
+        <div class="footer__copyright copyright">
+          <p class="copyright__text">
+            © «ЭКОТЕХ», 2010 - 2024
+          </p>
+          <p class="copyright__text">
+            Все права защищены
+          </p>
+        </div>
+
+        <a href="./policy.html" class="footer__policy" target="_blank">
+          Политика конфиденциальности
+        </a>
+      </div>
+
+
+      <a href="https://ww.net.ru/" class="footer__developer developer" target="_blank">
+        <svg width="53" height="30" viewBox="0 0 53 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M0.615234 29.8752V25.4556H1.52648C2.20723 25.4556 2.6843 25.4881 2.9684 25.5531C3.25249 25.6182 3.49907 25.7267 3.70811 25.8785C3.98685 26.0737 4.1959 26.3232 4.33526 26.6269C4.47999 26.9306 4.54968 27.2776 4.54968 27.6681C4.54968 28.0586 4.47999 28.4056 4.33526 28.7093C4.19053 29.013 3.98149 29.2625 3.70811 29.4577C3.49907 29.6041 3.25785 29.7126 2.98447 29.7776C2.71646 29.8427 2.293 29.8752 1.72481 29.8752H0.615234ZM1.79449 28.8828H1.99282C2.45916 28.8828 2.80223 28.7853 3.01663 28.59C3.23105 28.3948 3.33826 28.0857 3.33826 27.6627C3.33826 27.2397 3.23105 26.9306 3.01663 26.7353C2.80223 26.5401 2.45916 26.4371 1.99282 26.4371H1.79449V28.8828Z"
+            fill="#828282" />
+          <path d="M5.47703 29.8752V25.4556H6.67774V29.8752H5.47703Z" fill="#828282" />
+          <path
+            d="M9.87241 27.3211H12.2149C12.2149 27.3536 12.2203 27.3861 12.2203 27.4186C12.2203 27.4566 12.2203 27.5108 12.2203 27.5814C12.2203 28.3406 12.0219 28.9316 11.6253 29.3546C11.2286 29.7722 10.6711 29.9837 9.94747 29.9837C9.5937 29.9837 9.27745 29.9295 9.00407 29.821C8.7307 29.7126 8.48413 29.5499 8.26435 29.3275C8.0553 29.116 7.89449 28.8666 7.78193 28.5792C7.66936 28.2918 7.6104 27.988 7.6104 27.6735C7.6104 27.3428 7.664 27.039 7.77657 26.7624C7.88913 26.4859 8.0553 26.2364 8.27507 26.0141C8.49485 25.7972 8.74678 25.6344 9.03088 25.526C9.31496 25.4175 9.6205 25.3579 9.94747 25.3579C10.3763 25.3579 10.7515 25.4447 11.0839 25.6128C11.4109 25.7863 11.6895 26.0412 11.9147 26.3775L10.8802 26.8764C10.7568 26.7028 10.6175 26.578 10.4621 26.4967C10.3066 26.4154 10.1351 26.372 9.94213 26.372C9.58834 26.372 9.30424 26.4913 9.10055 26.7353C8.89687 26.9739 8.79502 27.3048 8.79502 27.7223C8.79502 28.1453 8.89687 28.4761 9.10055 28.7148C9.30424 28.9588 9.58834 29.0781 9.94213 29.0781C10.2423 29.0781 10.4942 29.0022 10.6979 28.8557C10.9016 28.7038 11.0196 28.5087 11.0517 28.2538H9.87241V27.3211Z"
+            fill="#828282" />
+          <path d="M13.1315 29.8752V25.4556H14.3322V29.8752H13.1315Z" fill="#828282" />
+          <path d="M16.0743 29.8752V26.4967H15.0934V25.4501H18.2398V26.4967H17.2589V29.8752H16.0743Z" fill="#828282" />
+          <path
+            d="M18.2184 29.8752L19.7247 25.4556H21.2148L22.7264 29.8752H21.5418L21.322 29.0835H19.6335L19.4083 29.8752H18.2184ZM19.8908 28.2212H21.0755L20.6305 26.7624C20.6145 26.7191 20.5983 26.6486 20.5715 26.5455C20.5501 26.4479 20.5179 26.3178 20.4805 26.166C20.4537 26.2744 20.4269 26.3775 20.4054 26.4751C20.3786 26.5726 20.3572 26.6703 20.3304 26.757L19.8908 28.2212Z"
+            fill="#828282" />
+          <path d="M23.3 29.8752V25.4556H24.4899V28.8449H25.9694V29.8752H23.3Z" fill="#828282" />
+          <path
+            d="M28.9657 28.4436C29.1426 28.6496 29.3196 28.8015 29.491 28.8991C29.6626 29.0022 29.8341 29.051 30.0056 29.051C30.1664 29.051 30.2951 29.0076 30.3969 28.9208C30.4988 28.834 30.5524 28.7256 30.5524 28.59C30.5524 28.4436 30.5095 28.3297 30.4184 28.2484C30.3272 28.167 30.1289 28.0857 29.818 28.0043C29.3892 27.885 29.0891 27.7331 28.9121 27.5488C28.7352 27.359 28.6441 27.1041 28.6441 26.7787C28.6441 26.3557 28.7835 26.0087 29.0623 25.743C29.3409 25.4772 29.7054 25.3416 30.1504 25.3416C30.3916 25.3416 30.6221 25.3741 30.8365 25.4393C31.0508 25.5043 31.2546 25.6019 31.4476 25.7375L31.0723 26.6052C30.9383 26.4859 30.799 26.3992 30.6542 26.3394C30.5095 26.2798 30.3701 26.2527 30.2308 26.2527C30.086 26.2527 29.9735 26.2852 29.8823 26.3557C29.7912 26.4263 29.7483 26.513 29.7483 26.6215C29.7483 26.7299 29.7859 26.8221 29.8663 26.8872C29.9467 26.9523 30.0968 27.0173 30.3219 27.077L30.3755 27.0933C30.8633 27.2288 31.1795 27.3699 31.3349 27.5325C31.4368 27.641 31.5172 27.7711 31.5708 27.923C31.6244 28.0748 31.6512 28.2429 31.6512 28.4273C31.6512 28.8937 31.5012 29.2733 31.1956 29.5607C30.8901 29.8481 30.4827 29.9891 29.9788 29.9891C29.6733 29.9891 29.3999 29.9349 29.148 29.8318C28.896 29.7289 28.6602 29.5607 28.4297 29.3384L28.9657 28.4436Z"
+            fill="#828282" />
+          <path d="M33.1092 29.8752V26.4967H32.1283V25.4501H35.2747V26.4967H34.2938V29.8752H33.1092Z" fill="#828282" />
+          <path
+            d="M35.9823 25.4555H37.1723V27.603C37.1723 27.9175 37.1776 28.1453 37.1937 28.2863C37.2098 28.4219 37.2366 28.5412 37.2741 28.6334C37.3224 28.7473 37.3974 28.834 37.5153 28.8937C37.6279 28.9534 37.7673 28.9805 37.9281 28.9805C38.0889 28.9805 38.2283 28.9534 38.3408 28.8937C38.4534 28.834 38.5338 28.7473 38.5821 28.6334C38.6196 28.5412 38.6464 28.4273 38.6625 28.2863C38.6785 28.1507 38.6839 27.923 38.6839 27.603V25.4501H39.8685V27.7874C39.8685 28.2701 39.8417 28.6279 39.7827 28.8611C39.7238 29.0943 39.6273 29.2896 39.488 29.4523C39.3379 29.6312 39.1342 29.7668 38.8715 29.8535C38.6089 29.9458 38.2925 29.9891 37.9227 29.9891C37.5475 29.9891 37.2313 29.9458 36.974 29.8535C36.7167 29.7614 36.5076 29.6312 36.3575 29.4523C36.2236 29.2896 36.127 29.0943 36.0681 28.8611C36.0091 28.6334 35.9823 28.2755 35.9823 27.7874V25.4555Z"
+            fill="#828282" />
+          <path
+            d="M40.9298 29.8752V25.4556H41.8411C42.5219 25.4556 42.9989 25.4881 43.283 25.5531C43.5671 25.6182 43.8137 25.7267 44.0228 25.8785C44.3014 26.0737 44.5106 26.3232 44.6499 26.6269C44.7946 26.9306 44.8643 27.2776 44.8643 27.6681C44.8643 28.0586 44.7946 28.4056 44.6499 28.7093C44.5051 29.013 44.2961 29.2625 44.0228 29.4577C43.8137 29.6041 43.5724 29.7126 43.2991 29.7776C43.031 29.8427 42.6076 29.8752 42.0394 29.8752H40.9298ZM42.1091 28.8828H42.3075C42.7738 28.8828 43.1169 28.7853 43.3313 28.59C43.5456 28.3948 43.6528 28.0857 43.6528 27.6627C43.6528 27.2397 43.5456 26.9306 43.3313 26.7353C43.1169 26.5401 42.7738 26.4371 42.3075 26.4371H42.1091V28.8828Z"
+            fill="#828282" />
+          <path d="M45.797 29.8752V25.4556H46.9976V29.8752H45.797Z" fill="#828282" />
+          <path
+            d="M52.5992 27.6735C52.5992 27.9934 52.5403 28.2918 52.4277 28.5683C52.3098 28.8449 52.1436 29.0943 51.9238 29.3167C51.6987 29.5336 51.4468 29.7018 51.1573 29.821C50.8733 29.9404 50.573 30 50.2675 30C49.9566 30 49.6565 29.9404 49.3724 29.821C49.0883 29.7018 48.8363 29.5336 48.6165 29.3167C48.3914 29.0998 48.2199 28.8503 48.1073 28.5683C47.9894 28.2864 47.9304 27.9934 47.9304 27.6789C47.9304 27.3644 47.9894 27.0661 48.1073 26.7841C48.2252 26.5076 48.3968 26.2581 48.6165 26.0358C48.831 25.8189 49.0828 25.6507 49.3724 25.5315C49.6565 25.4121 49.9566 25.3525 50.2675 25.3525C50.5784 25.3525 50.8786 25.4121 51.1627 25.5315C51.4521 25.6507 51.7041 25.8189 51.9238 26.0358C52.1436 26.2527 52.3098 26.5022 52.4277 26.7841C52.5403 27.0607 52.5992 27.359 52.5992 27.6735ZM50.2675 28.9697C50.5998 28.9697 50.8733 28.8449 51.0876 28.6009C51.302 28.3568 51.4092 28.0478 51.4092 27.6735C51.4092 27.3048 51.302 26.9956 51.0823 26.7462C50.8625 26.4967 50.5892 26.3775 50.2675 26.3775C49.9351 26.3775 49.6618 26.5022 49.4473 26.7462C49.2329 26.9902 49.1257 27.3048 49.1257 27.6735C49.1257 28.0532 49.2329 28.3622 49.4473 28.6063C49.6565 28.8503 49.9298 28.9697 50.2675 28.9697Z"
+            fill="#828282" />
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M3.59019 12.0825L13.0993 4.16486L22.6085 12.0825V0H25.578V18.4545L13.0993 8.05857L0.615234 18.4545V0H3.59019V12.0825Z"
+            fill="#828282" />
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M13.11 15.6508L5.32692 22.1366H0.642034L13.11 11.7516L25.578 22.1366H20.8986L13.11 15.6508Z"
+            fill="#828282" />
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M30.6221 12.0825L40.1312 4.16486L49.6457 12.0825L49.6404 0H52.6152V18.4545L40.1312 8.05857L27.6524 18.4545V0H30.6221V12.0825Z"
+            fill="#828282" />
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M40.1472 15.6508L32.3588 22.1366H27.6792L40.1472 11.7516L52.6152 22.1366H47.9358L40.1472 15.6508Z"
+            fill="#828282" />
+        </svg>
+      </a>
+
+
+    </div>
+  </div>
+
+</footer>
+@@include('popup.html', {})
+
+
+
+
+
+<!-- <script src="js/lib/simplebar.min.js"></script> -->
+<script src="js/lib/jquery-3.5.1.min.js"></script>
+<script src="js/lib/fancybox.umd.js"></script>
+<script src="js/lib/jquery.maskedinput.min.js"></script>
+<script src="js/lib/owl.carousel.min.js"></script>
+<script src="js/lib/swiper-bundle.min.js"></script>
 <script src="js/app.js"></script>
-
-<!-- <script src="js/script.js"></script> -->
