Подготовит стартовый набор картинок, стилей, фалйов и скриптов.

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -193,6 +193,29 @@
     </div>
   </div>
 
+  <div class="cookie">
+    <div class="cookie__wrapper">
+      <p>
+        Продолжая использовать наш сайт, вы принимаете
+        <a href="cookie.html" target="_blank">
+          политику использования cookie-файлов.
+        </a>
+      </p>
+    </div>
+    <div class="cookie__btn" onclick="acceptCookiePolicy();">Принимаю</div>
+    <p title="Не принимаю" class="cookie__close" onclick="closeCookiePolicyNotification();">
+      <svg width="51" height="51" viewBox="0 0 51 51" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M14.3793 14.3102C14.8556 13.8698 15.5956 13.9022 16.0321 14.3827L25 24.2534L33.9679 14.3827C34.4044 13.9022 35.1444 13.8698 35.6207 14.3102C36.0969 14.7507 36.1291 15.4973 35.6925 15.9778L26.5869 26L35.6925 36.0222C36.1291 36.5027 36.0969 37.2493 35.6206 37.6898C35.1444 38.1302 34.4044 38.0978 33.9679 37.6173L25 27.7467L16.0321 37.6173C15.5956 38.0978 14.8556 38.1302 14.3794 37.6898C13.9031 37.2493 13.8709 36.5027 14.3075 36.0222L23.4131 26L14.3075 15.9778C13.8709 15.4973 13.9031 14.7507 14.3793 14.3102Z"
+          fill="black" />
+      </svg>
+    </p>
+  </div>
+
+  <script>
+
+  </script>
+
 </footer>
 @@include('popup.html', {})
 
