добавит верстку хэдера

--- a/src/cookie.html
+++ b/src/cookie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('./html/head.html', {
-"title": "Экотех. Политика использования cookie-файлов",
+"title": "Сибирь. Политика использования cookie-файлов",
 })
 
 <body class="glavnaya" data-page="index">
@@ -12,7 +12,7 @@
     <section class="section">
       <div class="container container_info">
         <h2 class="personal_title">Политика использования cookie-файлов</h2>
-        <p class="personal_info">На интернет-сайте "Экотех" используются cookie-файлы, веб-маяки и иные схожие
+        <p class="personal_info">На интернет-сайте "Сибирь" используются cookie-файлы, веб-маяки и иные схожие
           технологии
           для того, чтобы отличить пользователей друг от друга. Это позволяет обеспечивать удобный просмотр страниц
           сайта,
