--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -4,10 +4,10 @@
     <div class="footer__logo logo">
       <!-- !!!!!!!!!!!!!!!! возможно надо переименовать в index.html: -->
       <a href="index.html" class="logo__link">
-        <img class="logo__ecoteh" width="241" height="45" src="@img/ecoteh.png" alt="Логотип Экотех">
+        <img class="logo__ecoteh" width="241" height="45" src="@img/ecoteh.png" alt="Логотип Сибирь">
       </a>
       <a href="#" class="logo__link">
-        <img class="logo__sk" width="241" height="45" src="@img/sk.png" alt="Логотип Экотех">
+        <img class="logo__sk" width="241" height="45" src="@img/sk.png" alt="Логотип Сибирь">
       </a>
     </div>
     <!-- </div> -->
@@ -132,7 +132,7 @@
       <div class="footer__policy-block">
         <div class="footer__copyright copyright">
           <p class="copyright__text">
-            © «ЭКОТЕХ», 2010 - 2024
+            © «Сибирь», 2010 - 2024
           </p>
           <p class="copyright__text">
             Все права защищены
