--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('./html/head.html', {
-"title": "Экотех. Главная",
+"title": "Сибирь. Главная",
 })
 
 <body class="glavnaya" data-page="index">
@@ -432,7 +432,7 @@
                 <div class="main-block__text-block  main-block__text-block_desc">
                   <p class="main-block__desc">
                     Создание компании
-                    «ООО Экотех-Тюмень»
+                    «ООО Сибирь-Тюмень»
                   </p>
                   <p class="main-block__desc">
                     Оформление лицензии на утилизацию опасных отходов
@@ -582,7 +582,7 @@
                   Петр
                 </div>
                 <div class="card__desc card__desc_hide">
-                  Обратилась в фирму Экотех-Тюмень для того, чтобы сделать покрытие из крошки под бассейн.
+                  Обратилась в фирму Сибирь-Тюмень для того, чтобы сделать покрытие из крошки под бассейн.
                   Порадовало все от сроков, до реализации!
                 </div>
                 <div class="card__desc card__desc_show">
@@ -631,7 +631,7 @@
                   Петр
                 </div>
                 <div class="card__desc card__desc_hide">
-                  Обратилась в фирму Экотех-Тюмень для того, чтобы сделать покрытие из крошки под бассейн.
+                  Обратилась в фирму Сибирь-Тюмень для того, чтобы сделать покрытие из крошки под бассейн.
                   Порадовало все от сроков, до реализации!
                 </div>
                 <div class="card__desc card__desc_show">
