--- a/src/policy.html
+++ b/src/policy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('./html/head.html', {
-"title": "Экотех. Политика компании в отношении обработки персональных данных",
+"title": "Сибирь. Политика компании в отношении обработки персональных данных",
 })
 
 <body class="novosti" data-page="novosti">
