--- a/src/agreement.html
+++ b/src/agreement.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('./html/head.html', {
-"title": "Экотех. Согласие на обработку персональных данных физических лиц",
+"title": "Сибирь. Согласие на обработку персональных данных физических лиц",
 })
 
 <body data-page="agreement">
