добавит верстку банера

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,26 @@
   @@include('./html/header.html', {})
 
   <main class="main glavnaya__main">
-    <section class="section glavnaya__section glavnaya__section_slider">
+    <section class="section">
+      <div class="container glavnaya__container glavnaya__container_banner banner">
+
+        <div class="bunner__content-wrap">
+          <h1 class="bunner__title">
+            Старт продаж 1 очереди
+            в малоэтажном ЖК
+          </h1>
+          <p class="bunner__text">
+            Срок сдачи 1 очереди – II квартал 2025 года
+          </p>
+
+          <button class="bunner__btn btn btn_dark btn_reset">
+            Смотреть планировки
+          </button>
+        </div>
+
+      </div>
+
+
       <div class="container glavnaya__container glavnaya__container_slider">
         <div class="glavnaya__slider slider swiper">
 
