--- a/src/agreement.html
+++ b/src/agreement.html
@@ -14,16 +14,17 @@
         <p class="personal_title">Согласие на обработку персональных данных физических лиц</p>
         <p class="personal_info">Физическое лицо обязуется принять настоящее Согласие на обработку персональных данных
           (далее – Согласие). Принятием Согласия является заполнение полей форм на интернет-сайте <a
-            style="text-decoration: underline; color: blue;" href="http://ekotex72.ru/" target="_blank">ekotex72.ru
+            style="text-decoration: underline; color: blue;" href="http://siberia-dev.ru/"
+            target="_blank">siberia-dev.ru
           </a> (Заказать звонок, Задать вопрос, Узнать стоимость, Уточнить, Заказать услугу веб-студии, Заказать),
           отправление сообщения по электронной почте <a style="display: initial;"
             href="mailto:ecoteh.72@gmail.com">ecoteh.72@gmail.com</a>, использование сервисов быстрой связи на
-          интернет-сайте <a style="text-decoration: underline; color: blue;" href="http://ekotex72.ru/"
-            target="_blank">ekotex72.ru
+          интернет-сайте <a style="text-decoration: underline; color: blue;" href="http://siberia-dev.ru/"
+            target="_blank">siberia-dev.ru
           </a> (звонки и сообщения в Telegram, WhatsApp, Viber), использование других сервисов обратной связи,
           размещенных
-          на интернет-сайте <a style="text-decoration: underline; color: blue;" href="http://ekotex72.ru/"
-            target="_blank">ekotex72.ru
+          на интернет-сайте <a style="text-decoration: underline; color: blue;" href="http://siberia-dev.ru/"
+            target="_blank">siberia-dev.ru
           </a>.</p>
         <p class="personal_info">Действуя свободно, своей волей и в своем интересе, а также подтверждая свою
           дееспособность, Пользователь дает свое согласие - Олеся Бородина, (Точный Адрес! замена) на обработку своих
