Добавит верстку блока "В районах сибири"

--- a/src/index.html
+++ b/src/index.html
@@ -227,6 +227,80 @@
       </div>
     </section>
 
+    <section class="section section_choice regions">
+      <div class="container regions__container">
+        <h2 class="regions__title title">
+          В районах Сибири
+        </h2>
+
+        <ul class="regions__list owl-carousel owl-carousel-index">
+          <li class="regions__item regions__item_1">
+            <h3 class="regions__item-title">
+              Гармония с природой
+            </h3>
+
+            <p class="regions__item-text">
+              Уединенный район, будет отличным решением для любителей открытых естественных видов, вдали от тесной городской застройки и суеты.
+            </p>
+          </li>
+
+          <li class="regions__item regions__item_2">
+            <h3 class="regions__item-title">
+              Тихий район 
+            </h3>
+
+            <p class="regions__item-text">
+              Удалённое от больших автомагистралей расположение и закрытый от машин и посторонних людей двор
+            </p>
+          </li>
+
+          <li class="regions__item regions__item_3">
+            <h3 class="regions__item-title">
+              Все нужное рядом
+            </h3>
+
+            <p class="regions__item-text">
+              Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для получения бытовых услуг и товаров первой необходимости
+            </p>
+          </li>
+
+          <li class="regions__item regions__item_4">
+            <h3 class="regions__item-title">
+              Уникальная экосистема
+            </h3>
+
+            <p class="regions__item-text">
+              Мы сохранили среду, созданную природой: живописный сосновый лес, который даже зимой будут радовать жителей ярким зеленым обликом
+            </p>
+          </li>
+
+          <li class="regions__item regions__item_5">
+            <h3 class="regions__item-title">
+              Закрытые и безопасные дворы без машин
+            </h3>
+
+            <p class="regions__item-text">
+              Ваши дети смогут спокойно и безопасно находиться на прогулке, а вы заниматься домашними делами, наблюдая за ними прямо из окна
+            </p>
+          </li>
+
+          <li class="regions__item regions__item_2">
+            <h3 class="regions__item-title">
+              Все нужное рядом
+            </h3>
+
+            <p class="regions__item-text">
+              Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для получения бытовых услуг и товаров первой необходимости
+            </p>
+          </li>         
+
+          
+        </ul>
+
+
+      </div>
+    </section>
+
 
     <!-- <div class="select select_carton select_w_250">
             <div class="select__wrapper">
