--- a/src/html/head.html
+++ b/src/html/head.html
@@ -11,5 +11,6 @@
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/fancybox.css">  
   <link rel="stylesheet" href="css/style.css">  
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш_API-ключ&lang=ru_RU" type="text/javascript"></script>
 
 </head>
