--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -2,7 +2,7 @@
   <div class="container footer__container">
     <div class="footer__top-block">
 
-      <form class="footer__form form" id="footer-form" action="post-mail.php" method="post" enctype="multipart/form-data">
+      <form class="footer__form form" id="footer-form" action="files/post-mail.php" method="post" enctype="multipart/form-data">
         <h3 class="form__title">
           Заказать звонок
         </h3>
