добавит отправку писем

--- a/src/index.html
+++ b/src/index.html
@@ -121,8 +121,8 @@
               </span>
               <ul class="select__list select__list_carton">
                 <li class="select__item" data-id="sosnoviy">Сосновый</li>
-                <li class="select__item" data-id="duboviy">Дубовый</li>
-                <li class="select__item" data-id="berezoviy">Березовый</li>
+                <!-- <li class="select__item" data-id="duboviy">Дубовый</li> -->
+                <!-- <li class="select__item" data-id="berezoviy">Березовый</li> -->
               </ul>
             </div>
           </div>
