--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -2,7 +2,8 @@
   <div class="container footer__container">
     <div class="footer__top-block">
 
-      <form class="footer__form form" id="footer-form" action="files/post-mail.php" method="post" enctype="multipart/form-data">
+      <form class="footer__form form" id="footer-form" action="files/post-mail.php" method="post"
+        enctype="multipart/form-data">
         <h3 class="form__title">
           Заказать звонок
         </h3>
@@ -53,7 +54,7 @@
         </div>
 
       </form>
-      
+
       <div class="footer__img-wrap">
         <img src="@img/footer-img.jpg" alt="">
 
@@ -88,7 +89,8 @@
           <ul class="nav__list">
 
             <li class="nav__item">
-              <a href="o-proekte.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="o-proekte.html" class="nav__link"> -->
                 <p class="nav__text">
                   Проекты
                 </p>
@@ -96,7 +98,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="planirovki.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="planirovki.html" class="nav__link"> -->
                 <p class="nav__text">
                   Коммерция
                 </p>
@@ -104,7 +107,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="mestopologenie.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="mestopologenie.html" class="nav__link"> -->
                 <p class="nav__text">
                   Способ покупки
                 </p>
@@ -112,7 +116,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="kontakty.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="kontakty.html" class="nav__link"> -->
                 <p class="nav__text">
                   Акции
                 </p>
@@ -129,7 +134,8 @@
           <ul class="nav__list">
 
             <li class="nav__item">
-              <a href="o-proekte.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="o-proekte.html" class="nav__link"> -->
                 <p class="nav__text">
                   Студии
                 </p>
@@ -137,7 +143,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="planirovki.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="planirovki.html" class="nav__link"> -->
                 <p class="nav__text">
                   1-комнатные
                 </p>
@@ -145,7 +152,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="mestopologenie.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="mestopologenie.html" class="nav__link"> -->
                 <p class="nav__text">
                   2-комнатные
                 </p>
@@ -153,7 +161,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="kontakty.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="kontakty.html" class="nav__link"> -->
                 <p class="nav__text">
                   3-комнатные
                 </p>
@@ -170,7 +179,8 @@
           <ul class="nav__list">
 
             <li class="nav__item">
-              <a href="o-proekte.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="o-proekte.html" class="nav__link"> -->
                 <p class="nav__text">
                   О компании
                 </p>
@@ -178,7 +188,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="planirovki.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="planirovki.html" class="nav__link"> -->
                 <p class="nav__text">
                   Новости
                 </p>
@@ -186,7 +197,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="mestopologenie.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="mestopologenie.html" class="nav__link"> -->
                 <p class="nav__text">
                   Сотрудничество
                 </p>
@@ -194,7 +206,8 @@
             </li>
 
             <li class="nav__item">
-              <a href="kontakty.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="kontakty.html" class="nav__link"> -->
                 <p class="nav__text">
                   Контакты
                 </p>
