--- a/src/html/header.html
+++ b/src/html/header.html
@@ -12,41 +12,45 @@
           <ul class="nav__list">
 
             <li class="nav__item">
-              <a href="o-proekte.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="o-proekte.html" class="nav__link"> -->
                 <p class="nav__text">
                   О проекте
                 </p>
               </a>
             </li>
- 
+
             <li class="nav__item">
-              <a href="planirovki.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="planirovki.html" class="nav__link"> -->
                 <p class="nav__text">
                   Планировки
                 </p>
               </a>
             </li>
- 
+
             <li class="nav__item">
-              <a href="mestopologenie.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="mestopologenie.html" class="nav__link"> -->
                 <p class="nav__text">
                   Местоположение
                 </p>
               </a>
             </li>
- 
+
             <li class="nav__item">
-              <a href="kontakty.html" class="nav__link">
+              <a href="#" class="nav__link">
+                <!-- <a href="kontakty.html" class="nav__link"> -->
                 <p class="nav__text">
                   Контакты
                 </p>
               </a>
-            </li> 
+            </li>
 
           </ul>
         </nav>
       </div>
-      
+
       <div class="header__contacts contacts">
         <a href="tel:8 900 362 52 69" class="contacts__item contacts__item_phone">8 900 362 52 69</a>
       </div>
