--- a/src/index.html
+++ b/src/index.html
@@ -325,6 +325,21 @@
           <li class="slider__item slider__item_4">
             <img src="@img/slide-4.jpg" alt="фасад дома">
           </li>
+          <li class="slider__item slider__item_5">
+            <img src="@img/slide-5.jpg" alt="фасад дома">
+          </li>
+          <li class="slider__item slider__item_6">
+            <img src="@img/slide-6.jpg" alt="фасад дома">
+          </li>
+          <li class="slider__item slider__item_7">
+            <img src="@img/slide-7.jpg" alt="фасад дома">
+          </li>
+          <li class="slider__item slider__item_8">
+            <img src="@img/slide-8.jpg" alt="фасад дома">
+          </li>
+          <li class="slider__item slider__item_9">
+            <img src="@img/slide-9.jpg" alt="фасад дома">
+          </li>
         </ul>
       </div>
     </section>
