добавит модальное окно формы выбора планировок

--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,7 @@
           <h3 class="plans__name">
             <!-- 1-комнатная 40,84м2 -->
           </h3>
-          <button class="plans__btn btn btn_reset btn_light-green">
+          <button class="plans__btn btn btn_reset btn_light-green popup-link" href="popup-request">
             Узнать цену
           </button>
         </div>
