добавит отправку третьей формы и плавную прокрутку

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
             Срок сдачи 1 очереди – II квартал 2025 года
           </p>
 
-          <button class="bunner__btn btn btn_dark btn_reset">
+          <a class="bunner__btn btn btn_dark btn_reset" href="#plans" scrollspy="plans">
             Смотреть планировки
-          </button>
+          </a>
         </div>
 
       </div>
@@ -346,7 +346,7 @@
 
 
 
-    <section class="section section_plans plans">
+    <section class="section section_plans plans" id="plans">
       <div class="container plans__container">
         <h2 class="plans__title title">
           Планировки
