--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -245,7 +245,7 @@
         </a>
       </div>
 
-      <button class="btn btn_dark btn_reset footer__btn popup-link" href="#popup-form">
+      <button class="btn btn_dark btn_reset footer__btn popup-link" href="#popup-notification">
         Форма уведомления
       </button>
 
