добавит адаптив карусели

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   @@include('./html/header.html', {})
 
-  <main class="main glavnaya__main">
+  <main class="main glavnaya__main glavnaya__main_top">
     <section class="section section_banner banner">
       <div class="container banner__container">
 
@@ -226,6 +226,8 @@
         </div>
       </div>
     </section>
+  </main>
+
 
     <section class="section section_regions regions">
       <div class="container regions__container">
@@ -345,6 +347,7 @@
     </section>
 
 
+  <main class="main glavnaya__main glavnaya__main_bot">
 
     <section class="section section_plans plans" id="plans">
       <div class="container plans__container">
