--- a/src/agreement.html
+++ b/src/agreement.html
@@ -18,7 +18,7 @@
             target="_blank">siberia-dev.ru
           </a> (Заказать звонок, Задать вопрос, Узнать стоимость, Уточнить, Заказать услугу веб-студии, Заказать),
           отправление сообщения по электронной почте <a style="display: initial;"
-            href="mailto:ecoteh.72@gmail.com">ecoteh.72@gmail.com</a>, использование сервисов быстрой связи на
+            href="mailto:info@sibir.com">info@sibir.com</a>, использование сервисов быстрой связи на
           интернет-сайте <a style="text-decoration: underline; color: blue;" href="http://siberia-dev.ru/"
             target="_blank">siberia-dev.ru
           </a> (звонки и сообщения в Telegram, WhatsApp, Viber), использование других сервисов обратной связи,
