--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,3 +1,8 @@
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NMZW3TMH"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <header class="header lock-padding">
   <div class="container header__container">
     <div class="header__top-block">
