--- a/src/html/head.html
+++ b/src/html/head.html
@@ -1,4 +1,6 @@
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -16,18 +18,16 @@
   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
   ym(97841820, "init", {
-       clickmap:true,
-       trackLinks:true,
-       accurateTrackBounce:true,
-       webvisor:true,
-       ecommerce:"dataLayer"
+    clickmap:true,
+    trackLinks:true,
+    accurateTrackBounce:true,
+    webvisor:true,
+    ecommerce:"dataLayer"
   });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/97841820" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
     
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>@@title</title>
   <link rel="apple-touch-icon" sizes="180x180" href="@img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="@img/favicon-32x32.png">
@@ -38,6 +38,5 @@
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/fancybox.css">  
   <link rel="stylesheet" href="css/style.css">  
-  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-
+  <script src="https://api-maps.yandex.ru/v3/?apikey=9e0bbb5f-9b5e-4f9e-8eb8-b98592b9e414&lang=ru_RU"></script>
 </head>
