--- a/src/policy.html
+++ b/src/policy.html
@@ -19,7 +19,7 @@
               с
               Федеральным законом от 27.07.2006. №152-ФЗ «О персональных данных» (далее – ФЗ-152).</p>
             <p class="policy__text">Настоящая Политика определяет порядок обработки персональных данных и меры по
-              обеспечению безопасности персональных данных в <!--Название компании--> <i class="">Олеся Бородина</i>
+              обеспечению безопасности персональных данных в <!--Название компании--> <i class="">Сибирь Девелопмент</i>
               (далее – Оператор) с целью защиты прав и свобод человека и гражданина при обработке его персональных
               данных,
               в том числе защиты прав на неприкосновенность частной жизни, личную и семейную тайну.</p>
