--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -69,8 +69,8 @@
     <div class="footer__middle-block">
 
       <div class="footer__contacts contacts">
-        <a href="tel:8 900 362 52 69" class="contacts__item contacts__item_phone">
-          8 900 362 52 69
+        <a href="tel:+7 3452 611 157" class="contacts__item contacts__item_phone">
+          +7 3452 611 157
         </a>
         <a href="mailto:info@sibir.com" class="contacts__item contacts__item_email">
           info@sibir.com
