--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,6 @@
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NMZW3TMH"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NMZW3TMH" height="0" width="0"
+    style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <header class="header lock-padding">
@@ -57,7 +57,7 @@
       </div>
 
       <div class="header__contacts contacts">
-        <a href="tel:8 900 362 52 69" class="contacts__item contacts__item_phone">8 900 362 52 69</a>
+        <a href="tel:+7 3452 611 157" class="contacts__item contacts__item_phone">+7 3452 611 157</a>
       </div>
       <button class="header__burger burger">
         <div class="burger__open-btn">
