добавит якорные ссылки

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -68,7 +68,7 @@
 
     <div class="footer__middle-block">
 
-      <div class="footer__contacts contacts">
+      <div class="footer__contacts contacts" id="footer-contacts">
         <a href="tel:+7 3452 611 157" class="contacts__item contacts__item_phone">
           +7 3452 611 157
         </a>
