--- a/src/html/header.html
+++ b/src/html/header.html
@@ -17,7 +17,7 @@
           <ul class="nav__list">
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#about-section" class="nav__link">
                 <!-- <a href="o-proekte.html" class="nav__link"> -->
                 <p class="nav__text">
                   О проекте
@@ -26,7 +26,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#plans-section" class="nav__link">
                 <!-- <a href="planirovki.html" class="nav__link"> -->
                 <p class="nav__text">
                   Планировки
@@ -35,7 +35,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#geo-section" class="nav__link">
                 <!-- <a href="mestopologenie.html" class="nav__link"> -->
                 <p class="nav__text">
                   Местоположение
@@ -44,7 +44,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#footer-contacts" class="nav__link">
                 <!-- <a href="kontakty.html" class="nav__link"> -->
                 <p class="nav__text">
                   Контакты
