--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       </div>
     </section>
 
-    <section class="section section_about about">
+    <section class="section section_about about" id="about-section">
       <div class="container about__container">
 
         <div class="about__content-wrap">
@@ -348,7 +348,7 @@
 
   <main class="main glavnaya__main glavnaya__main_bot">
 
-    <section class="section section_plans plans" id="plans">
+    <section class="section section_plans plans" id="plans-section">
       <div class="container plans__container">
         <h2 class="plans__title title">
           Планировки
@@ -432,7 +432,7 @@
       </div>
     </section>
 
-    <section class="section section_geo geo">
+    <section class="section section_geo geo" id="geo-section">
       <div class="container geo__container">
         <h2 class="geo__title title">
           Местоположение
