добавит верстку страницы акции

--- a/src/akcii.html
+++ b/src/akcii.html
@@ -4,76 +4,109 @@
 "title": "Сибирь. Акции",
 })
 
-<body class="not-found" data-page="404">
+<body class="promo-page">
   @@include('./html/header.html', {})
 
-  <main class="main news-page__main">
-    <section class="section news-page__section">
-      <div class="container news-page__container">
-        <h1 class="news-page__title title title_small">
-          Новости Сибири
+  <main class="main promo-page__main">
+    <section class="section promo-page__section">
+      <div class="container promo-page__container">
+        <h1 class="promo-page__title title title_small">
+          Акции Сибири
         </h1>
-        <div class="news-page__btn-wrapper">
-          <a class="news-page__btn news-page__btn_green" href="novosti.html">
+        <div class="promo-page__btn-wrapper">
+          <a class="promo-page__btn promo-page__btn_white" href="akcii.html">
             Новости
           </a>
-          <a class="news-page__btn news-page__btn_white" href="akcii.html">
+          <a class="promo-page__btn promo-page__btn_green" href="novosti.html">
             Акции
           </a>
         </div>
-        <ul class="news-page__cards-list">
-          <li class="news-page__cards-item">
-            <div class="news-page__card-img-wrapper">
-              <img src="@img/news-img-1.jpg" alt="Проект">
+
+        <ul class="promo-page__cards-list">
+          <li class="promo-page__cards-item">
+            <div class="promo-page__card-img-wrapper">
+              <img src="@img/promo-img-1.jpg" alt="Проект">
             </div>
-            <p class="news-page__card-date">
+            <span class="promo-page__card-date">
               01 мая 2024
-            </p>
-            <a class="news-page__card-link" href="novosti-item.html">
-              <h2 class="news-page__card-title">
-                Динамика строительства «Сосновый». Апрель 2024.
+            </span>
+            <span class="promo-page__card-period">
+              <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_937_4871)">
+                <path d="M8.75 4.31579V8.36842L10.9605 10.2105M15.75 8C15.75 11.866 12.616 15 8.75 15C4.88401 15 1.75 11.866 1.75 8C1.75 4.13401 4.88401 1 8.75 1C12.616 1 15.75 4.13401 15.75 8Z" stroke="#748D55" stroke-width="1.5"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_937_4871">
+                <rect width="16" height="16" fill="white" transform="translate(0.75)"/>
+                </clipPath>
+                </defs>
+              </svg>                
+              <p class="promo-page__card-date-text">
+                Осталось 12 дней
+              </p>
+            </span>
+            <a class="promo-page__card-link" href="novosti-item.html">
+              <h2 class="promo-page__card-title">
+                Паркинг в подарок в ЖК «Островский»
               </h2>
             </a>
           </li>
-          <li class="news-page__cards-item">
-            <div class="news-page__card-img-wrapper">
-              <img src="@img/news-img-2.jpg" alt="Проект">
+          <li class="promo-page__cards-item">
+            <div class="promo-page__card-img-wrapper">
+              <img src="@img/promo-img-2.jpg" alt="Проект">
             </div>
-            <p class="news-page__card-date">
+            <span class="promo-page__card-date">
               01 мая 2024
-            </p>
-            <a class="news-page__card-link" href="novosti-item.html">
-              <h2 class="news-page__card-title">
-                Сибирь разрабатывает новый проект ЖК «Успенка»
+            </span>
+            <span class="promo-page__card-period">
+              <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_937_4871)">
+                <path d="M8.75 4.31579V8.36842L10.9605 10.2105M15.75 8C15.75 11.866 12.616 15 8.75 15C4.88401 15 1.75 11.866 1.75 8C1.75 4.13401 4.88401 1 8.75 1C12.616 1 15.75 4.13401 15.75 8Z" stroke="#748D55" stroke-width="1.5"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_937_4871">
+                <rect width="16" height="16" fill="white" transform="translate(0.75)"/>
+                </clipPath>
+                </defs>
+              </svg>                
+              <p class="promo-page__card-date-text">
+                Осталось 12 дней
+              </p>
+            </span>
+            <a class="promo-page__card-link" href="novosti-item.html">
+              <h2 class="promo-page__card-title">
+                Квартиры в расрочку от 2%
               </h2>
             </a>
           </li>
-          <li class="news-page__cards-item">
-            <div class="news-page__card-img-wrapper">
-              <img src="@img/news-img-3.jpg" alt="Проект">
+          <!-- <li class="promo-page__cards-item">
+            <div class="promo-page__card-img-wrapper">
+              <img src="@img/promo-img-2.jpg" alt="Проект">
             </div>
-            <p class="news-page__card-date">
+            <span class="promo-page__card-date">
               01 мая 2024
-            </p>
-            <a class="news-page__card-link" href="novosti-item.html">
-              <h2 class="news-page__card-title">
-                Динамика строительства Сосновый. Апрель 2024.
+            </span>
+            <span class="promo-page__card-period">
+              <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_937_4871)">
+                <path d="M8.75 4.31579V8.36842L10.9605 10.2105M15.75 8C15.75 11.866 12.616 15 8.75 15C4.88401 15 1.75 11.866 1.75 8C1.75 4.13401 4.88401 1 8.75 1C12.616 1 15.75 4.13401 15.75 8Z" stroke="#748D55" stroke-width="1.5"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_937_4871">
+                <rect width="16" height="16" fill="white" transform="translate(0.75)"/>
+                </clipPath>
+                </defs>
+              </svg>                
+              <p class="promo-page__card-date-text">
+                01 мая 2024
+              </p>
+            </span>
+            <a class="promo-page__card-link" href="novosti-item.html">
+              <h2 class="promo-page__card-title">
+                Квартиры в расрочку от 2%
               </h2>
             </a>
-          </li>
-          <li class="news-page__cards-item">
-            <div class="news-page__card-img-wrapper">
-              <img src="@img/news-img-4.jpg" alt="Проект">
-            </div>
-            <p class="news-page__card-date">
-              01 мая 2024
-            </p>
-            <a class="news-page__card-link" href="novosti-item.html">
-              <h2 class="news-page__card-title">
-                Сибирь объявляет об операционных результатах первого квартала 2024
-              </h2>
-            </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </section>
